1、修改首页概览的布局；2、修复第二轮测试的bug

--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -84,9 +84,7 @@
 /**表格样式结束*/
 /**首页的表格样式----开始*/
 .overview .el-table {
-  position: absolute;
-  top: 61px;
-  bottom: 6px;
+  height: 365px;
   overflow-y: scroll;
   font-size: 14px;
   color: #fff;
