--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -83,9 +83,17 @@
 
 /**表格样式结束*/
 /**首页的表格样式----开始*/
-.overview .el-table {
+.overview {
   height: 365px;
+  overflow: hidden;
+  padding: 0;
+}
+
+.overview .el-table {
   overflow-y: scroll;
+  box-sizing: content-box;
+  padding-right: 17px;
+  height: 365px;
   font-size: 14px;
   color: #fff;
   background: #21206C;
@@ -345,7 +353,7 @@
 }
 
 .content-main {
-  padding-right: 180px;
+  padding-right: 20px;
   background-color: #E9ECF1;
   flex: 1;
   overflow-y: scroll;
