场所详情、重点人员名单、图像的疑似人员以图搜图

--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -262,7 +262,8 @@
   background: #E9ECF1;
 }
 
-.warning .el-dialog__header {
+/**所有的弹窗标题靠左*/
+.el-dialog__header {
   text-align: left;
   padding-bottom: 15px;
 }
