体验优化需求：今日***添加时间选择条件、告警添加批量处理按钮和状态颜色

--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -425,3 +425,16 @@
 .face-item:nth-child(odd) {
   margin-right: 20px;
 }
+
+* {
+  font-size: 13px;
+}
+
+.upload.img {
+  margin: 0
+}
+
+.upload.img .el-button--medium {
+  padding: 2px 10px;
+  height: 36px;
+}
