--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -203,11 +203,37 @@
 }
 
 /*全局搜索*/
-.all-search .el-input-group__append, .all-search .el-input-group__prepend {
+.all-search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.all-search .el-button {
   background-color: #2B3F6E;
   color: #fff;
   border: none;
+  border-radius: 4px 0 0 4px;
+  height: 40px;
   padding: 0 10px;
+}
+
+.all-search .el-button [class*=el-icon-] {
+  background-color: #2B3F6E;
+  color: #fff;
+  border: none;
+  padding: 0;
+  font-size: 24px;
+}
+
+.all-search .el-input-group__append {
+  background-color: #2B3F6E;
+  color: #fff;
+  border: none;
+  padding: 0 20px;
 }
 
 .all-search .el-button [class*=el-icon-] {
@@ -221,7 +247,7 @@
 .all-search .el-input__inner {
   background-color: #2B3F6E;
   border: none;
-  border-right: 1px solid #08163D;
+  border-radius: 0;
   border-left: 1px solid #08163D;
   color: #fff;
   padding: 0 10px;
@@ -544,6 +570,26 @@
 }*/
 
 /*关联人员/疑似人员的css*/
+.face2-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px #D7D7D7 solid;
+  border-radius: 6px;
+  background: #fff;
+  margin-bottom: 10px;
+}
+
+.face2-item img {
+  max-width: 120px;
+  max-height: 120px;
+  border-radius: 5px;
+  text-align: left;
+  margin: 15px 0 15px 15px;
+}
+
 .face-main {
   display: -webkit-box;
   display: -ms-flexbox;
