--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -302,7 +302,7 @@
 /** 定制版dialog*/
 
 .add-appdiv {
-  border: 1px #D0CACF solid;
+  border: 1px #D7D7D7 solid;
   border-radius: 4px;
   padding: 30px;
   margin-bottom: 20px;
@@ -419,17 +419,29 @@
 
 /**对比工具的头像*/
 .avatar-uploader .el-upload {
-  border: 1px dashed #ccc;
-  border-radius: 6px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  max-width: 222px;
-  max-height: 222px;
+  border: 1px dashed #ccc;
+  border-radius: 6px;
+  max-width: 210px;
+  max-height: 210px;
 }
 
 .avatar-uploader .el-upload:hover {
   border-color: #6699FF;
+}
+
+.avatar-uploader .el-upload-dragger {
+  width: 210px;
+  height: 210px;
+  border: none;
+  background: rgba(0, 0, 0, 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /**添加页面的标签*/
@@ -522,20 +534,40 @@
 }
 
 /*一级导航栏*/
-.head-menu .el-menu--horizontal {
+.el-menu--horizontal {
   border-bottom: none !important
 }
 
-.head-menu .el-menu--horizontal > .el-menu-item.is-active {
+/*去掉箭头，有子菜单时*/
+.head-menu .el-menu--horizontal > .el-submenu .el-submenu__icon-arrow {
+  display: none;
+}
+
+.head-menu .el-menu--horizontal > .el-menu-item.is-active, .head-menu .el-menu--horizontal > .el-submenu.is-active .el-submenu__title {
   border-bottom: 3px solid #3FA8F3 !important
 }
 
-.head-menu .el-menu--horizontal .el-menu .el-menu-item, .el-menu--horizontal .el-menu .el-submenu__title {
+.head-menu .el-menu--horizontal > .el-submenu.is-active .el-submenu__title i {
+  color: #3FA8F3;
+}
+
+.el-menu--popup {
+  min-width: 130px;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+  box-shadow: none
+}
+
+.head-menu .el-menu--horizontal > .el-menu-item, .head-menu .el-menu--horizontal > .el-submenu .el-submenu__title {
+  border-bottom: 3px solid transparent;
+}
+
+.head-menu .el-menu--horizontal .el-menu .el-menu-item, .head-menu .el-menu--horizontal .el-menu .el-submenu__title {
   padding: 0 !important
 }
 
-.head-menu .el-menu-item {
-  padding: 0 13px;
+.head-menu .el-menu-item, .head-menu .el-submenu .el-submenu__title {
+  padding: 0 16px;
 }
 
 .home-container {
@@ -632,12 +664,67 @@
 
 /*图片搜索控件*/
 .upload.img {
-  margin: 0
+  height: 34px;
+  border: 1px solid #dcdfe6;
+  padding: 0;
+  border-radius: 4px;
+  margin: 2px 0;
 }
 
-.upload.img .el-button--medium {
-  padding: 2px 10px;
-  height: 36px;
+.upload.img .el-upload-dragger {
+  height: 34px;
+  width: 100px;
+  border: none;
+}
+
+.upload.img .el-upload__text, .upload.img .el-upload--text {
+  height: 34px;
+  padding: 0;
+  margin: 0;
+}
+
+.upload.img .el-icon-close {
+  height: 34px;
+  color: #6699ff;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+/*全局搜索图片*/
+.image .el-upload-dragger {
+  height: 180px;
+  width: 215px;
+  border: none;
+}
+
+/*图片空间可拖拽*/
+.vip-140 .el-upload-dragger {
+  max-height: 140px;
+  max-width: 140px;
+}
+
+.vip-140 .el-upload--picture-card {
+  max-height: 140px;
+  max-width: 140px;
+  border: none;
+}
+
+.vip-140 .el-upload-list--picture-card .el-upload-list__item {
+  max-height: 140px;
+  max-width: 140px;
+}
+
+.vip-150 .el-upload-dragger {
+  max-height: 150px;
+  max-width: 150px;
+  border: none;
+}
+
+.vip-180 .el-upload-dragger {
+  max-height: 180px;
+  max-width: 180px;
+  border: none;
 }
 
 /*去掉标记的白色边框*/
@@ -680,4 +767,38 @@
 .div-delete:active, .div-delete:hover, .div-delete:focus {
   color: #fff;
   background-color: #2074B0;
+}
+
+/*翻码申请的输入框*/
+.apply .el-textarea__inner {
+  border: none;
+}
+
+/*登陆页*/
+.login-input .el-radio-button__inner {
+  background: #000027;
+  border: none;
+  width: 190px;
+  padding: 20px;
+  font-size: 18px;
+  color: #9F9DA8
+}
+
+.login-input .el-radio-button:first-child .el-radio-button__inner, .login-input .el-radio-button:last-child .el-radio-button__inner {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-left: none
+}
+
+.login-input .el-radio-button:first-child .el-radio-button__inner {
+  border-radius: 4px 0 0 0;
+}
+
+.login-input .el-radio-button:last-child .el-radio-button__inner {
+  border-radius: 0 4px 0 0;
+}
+
+.login-input .el-radio-button__orig-radio:checked + .el-radio-button__inner {
+  color: #6699ff;
+  background-color: rgba(0, 0, 0, 0);;
 }
