1、新需求完成：智能交集、告警比对阈值、图像搜索的时加上相似度滑块/输入框、轨迹样式和轨迹次数统计

--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -260,8 +260,17 @@
 }
 
 .el-popover {
-  max-height: 250px;
+  max-height: 280px;
   overflow-y: auto;
+}
+
+/*垂直排列的多选框*/
+.intersect .el-checkbox + .el-checkbox {
+  margin-left: 0;
+}
+
+.intersect .el-checkbox {
+  margin-bottom: 8px;
 }
 
 /*系统参数配置*/
