--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -686,7 +686,7 @@
   height: 34px;
   border: 1px solid #dcdfe6;
   padding: 0;
-  border-radius: 4px;
+  border-radius: 4px 0 0 4px;
   margin: 2px 0;
 }
 
@@ -708,6 +708,12 @@
   margin: 0;
   padding: 0;
   text-align: center;
+}
+
+.upload .el-input-number.is-controls-right .el-input__inner {
+  padding-left: 5px;
+  padding-right: 40px;
+  border-radius: 0 4px 4px 0;
 }
 
 /*全局搜索图片*/
