第二轮测试回归版本

--- a/src/assets/css/el-custom.css
+++ b/src/assets/css/el-custom.css
@@ -872,7 +872,10 @@
 .text-overflow-m {
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -moz-box;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical
+  -moz-box-orient: vertical;
+  -webkit-box-orient: vertical;
+  overflow-wrap: break-word;
 }
